# VTKU3DExporter

./: .gitignore  BUILD.md  BuildVTKCompileTools.cmake  CMakeLists.txt  FetchVTKExternalModule.cmake  README.md  setup.py  test.py  vtk.module  vtkU3DExporter.cxx  vtkU3DExporter.h
.github/: dependabot.yml
.github/scripts/: install.sh
.github/workflows/: build_wheels.yml
SuperBuild/: External_U3D.cmake
Testing/Cxx/: CMakeLists.txt  vtkU3DExporterTest.cxx
Testing/Python/: conftest.py  pyi_test_program.py  test_import.py  test_u3d_generation.py
Testing/VTKCompileTools/: CMakeLists.txt
lib/vtkmodules/__pyinstaller_vtkU3DExporter/: hook-vtk.py
